Inclusão de dependencias para openapi, postgres, lombok, mapstruct